--- a/PA1_template.html
+++ b/PA1_template.html
@@ -317,7 +317,7 @@ wnmeanstep &lt;- format(mean(wnstepsbyday$steps), digits = 7, nsmall = 3)
 
 <p>The mean of total number of steps per weekday is: 10255.289
 The mean of total number of steps per weekend is: 12201.000
-The number of steps taken on a weekend are more than a weekend based on the values</p>
+The avg number of steps taken on a weekend are more than a weekday based on the values</p>
 
 <h1>END</h1>
 
